overflow x and y on mobile trying to fix

--- a/src/index.css
+++ b/src/index.css
@@ -300,6 +300,7 @@ textarea:focus, input:focus{
     padding: 15px;
     margin: 0;
     font-size: 25px;
+    font-family: pacifico;
   }
 
   .mobile-links ul li:hover {
@@ -365,12 +366,15 @@ nav ul li {
  
 
   .intro {
-
+   
     width: 100%;
     display: flex;
     margin: 60px auto;
     flex-direction: column;
     opacity: 0.7;
+    overflow-y: hidden;
+    overflow-x: hidden;
+
   }
 
   .intro-left {
@@ -388,6 +392,9 @@ nav ul li {
     width: 100%;
     height: 50%;
 
+  }
+
+  #terminal-div {
   }
   .intro-inner {
     
@@ -483,7 +490,8 @@ nav ul li {
  
 
   .intro {
-
+    overflow-y: hidden;
+    overflow-x: hidden;
     width: 100%;
     display: flex;
     margin: 60px auto;
@@ -604,7 +612,8 @@ nav ul li {
  
 
   .intro {
-
+    overflow-y: hidden;
+    overflow-x: hidden;
     width: 100%;
     display: flex;
     margin: 60px auto;
@@ -639,7 +648,7 @@ nav ul li {
 
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 930px) {
 
   .mobile-links {
     position: absolute;
@@ -657,6 +666,7 @@ nav ul li {
     padding: 15px;
     margin: 0;
     font-size: 25px;
+    font-family: pacifico;
   }
 
   .mobile-links ul li:hover {
@@ -722,7 +732,8 @@ nav ul li {
  
 
   .intro {
-
+    overflow-y: hidden;
+    overflow-x: hidden;
     width: 100%;
     display: flex;
     margin: 60px auto;
